# SoftwareEngProject

./: README.md  TESTERS.md  pyproject.toml  requirements.txt
docs/: sequence_diagram.mermaid  uml_class_diagram.mermaid
examples/sample_project/sample/: main.py  utils.py
examples/sample_project/tests/: test_sample.py
refactor_tool/: analyze.py  cli.py  diff_utils.py  extract.py  project.py  readability.py  rename.py
refactor_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
