[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refactor-tool"
version = "0.1.0"
description = "Prototype Python refactoring tool: analyze, rename, extract, and readability transforms"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Refactoring Tool Prototype", email = "noreply@example.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing"
]
dependencies = [
  "typer>=0.12.0,<1.0.0",
  "rich>=13.7.0,<14.0.0",
  "libcst>=1.3.0,<2.0.0",
  "asttokens>=2.4.1,<3.0.0",
  "pytest>=8.2.0,<9.0.0"
]

[project.scripts]
refactor-tool = "refactor_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["refactor_tool"]


